# ChangeLog for x11-libs/gtk+
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk+/ChangeLog,v 1.89 2004/04/09 07:05:10 lv Exp $

*gtk+-2.4.0-r1 (09 Apr 2004)

  09 Apr 2004; Travis Tilley <lv@gentoo.org> gtk+-2.4.0-r1.ebuild,
  files/gtk+-2.4.0-uimanager-zero-becomes-null.patch:
  added patch to fix a crash in epiphany that may or may not occur only on
  amd64. for more information on this bug, please refer to
  http://bugzilla.gnome.org/show_bug.cgi?id=138997

  30 Mar 2004; Donnie Berkholz <spyderous@gentoo.org>; gtk+-2.2.4-r1.ebuild,
  gtk+-2.4.0.ebuild:
  Change x11-base/xfree dependency to virtual/x11. Everyone on xfree should be
  on 4.3.0-r3 or greater by now, so #20407 shouldn't be an issue.

*gtk+-2.4.0 (18 Mar 2004)

  18 Mar 2004; foser <foser@gentoo.org> gtk+-2.4.0.ebuild :
  New release
  Remove incorporated patches
  Removed wm patch, it's broken
  Correct license
  
  06 Mar 2004; Stephen P. Becker <geoman@gentoo.org> gtk+-1.2.10-r10.ebuild,
  gtk+-2.2.4-r1.ebuild:
  Added ~mips keyword.

*gtk+-1.2.10-r11 (05 Feb 2004)

  05 Feb 2004; <spider@gentoo.org> gtk+-1.2.10-r11.ebuild:
  Minor change to DEPEND, adding an RDEPEND to get intltool out of the RDEPEND
  set. this deserves a revbump only to make sure that packages get updated.

  07 Dec 2003; foser <foser@gentoo.org> gtk+-1.2.10-r10.ebuild :
  Fix sysconfdir to /etc to fix gtkrc problems described in #34279

  14 Nov 2003; Aron Griffis <agriffis@gentoo.org> gtk+-1.2.10-r10.ebuild:
  Stable on ia64

  08 Nov 2003; Todd Sunderlin <todd@gentoo.org> gtk+-2.2.4-r1.ebuild:
  added sparc keyword

  20 Oct 2003; Aron Griffis <agriffis@gentoo.org> gtk+-2.2.4-r1.ebuild:
  Stable on alpha

  08 Oct 2003; foser <foser@gentoo.org> gtk+-2.2.4-r1.ebuild :
  Added patch to fix notification area, submitted by <pat@engsoc.org>

  06 Oct 2003; Mike Gardiner <obz@gentoo.org> gtk+-2.2.4-r1.ebuild:
  Marked stable on x86
