@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk+/gtk+-2.4.0-r1.ebuild,v 1.2 2004/04/09 17:12:20 lv Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk+/gtk+-2.4.0-r1.ebuild,v 1.3 2004/04/15 02:24:36 geoman Exp $
 
 inherit libtool flag-o-matic eutils
 
@@ -10,7 +10,7 @@ SRC_URI="ftp://ftp.gtk.org/pub/gtk/v2.4/${P}.tar.bz2"
 
 LICENSE="LGPL-2"
 SLOT="2"
-KEYWORDS="~x86 ~ppc ~sparc ~mips ~alpha hppa ~amd64 ~ia64"
+KEYWORDS="~x86 ~ppc ~sparc mips ~alpha hppa ~amd64 ~ia64"
 IUSE="doc tiff jpeg"
 
 RDEPEND="virtual/x11
