@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/pango
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/pango/ChangeLog,v 1.56 2004/03/18 17:58:16 foser Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/pango/ChangeLog,v 1.57 2004/04/15 02:23:02 geoman Exp $
+
+  14 Apr 2004; Stephen P. Becker <geoman@gentoo.org> pango-1.2.5-r1.ebuild,
+  pango-1.4.0.ebuild:
+  Marked stable on mips.
 
 *pango-1.4.0 (18 Mar 2004)
 
