@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/gtk+
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk+/ChangeLog,v 1.89 2004/04/09 07:05:10 lv Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk+/ChangeLog,v 1.90 2004/04/15 02:24:36 geoman Exp $
+
+  14 Apr 2004; Stephen P. Becker <geoman@gentoo.org> gtk+-1.2.10-r10.ebuild,
+  gtk+-1.2.10-r11.ebuild, gtk+-2.4.0-r1.ebuild:
+  Marked stable on mips.
 
 *gtk+-2.4.0-r1 (09 Apr 2004)
 
